frontend/test/should_fail/matchclassimplements_002.grg
#using "matchclassmodel.gm"

rule r(start:Node) implements shared
{
	start --> n:Node;
	if{ !n.visited; }
---
	def x:Node; // node-edge mismatch

	modify {
		delete(n);
	}
}

match class shared
{
	def -x:Edge->;
}
